syntax = "proto3";

message Test{
  oneof value_type {
      bool bool_value = 1;
      int64 int64_value = 2;
  }
}